--- a/mindex.html
+++ b/mindex.html
@@ -503,19 +503,19 @@
 			switch (type) {
 				case 'correct':
 					soundFolder = 'sounds/correct/';
-					soundFiles = ['correct1.mp3', 'correct2.mp3', 'correct3.mp3'];
+					soundFiles = ['correct1.mp3', 'correct2.mp3', 'correct3.mp3', 'correct4.mp3', 'correct5.mp3', 'correct6.mp3', 'correct7.mp3', 'correct8.mp3'];
 					break;
 				case 'wrong':
 					soundFolder = 'sounds/wrong/';
-					soundFiles = ['wrong1.mp3', 'wrong2.mp3', 'wrong3.mp3'];
+					soundFiles = ['wrong1.mp3', 'wrong2.mp3', 'wrong3.mp3', 'wrong4.mp3', 'wrong5.mp3', 'wrong6.mp3', 'wrong7.mp3', 'wrong8.mp3', 'wrong9.mp3', 'wrong10.mp3', 'wrong11.mp3', 'wrong12.mp3', 'wrong13.mp3', 'wrong14.mp3', 'wrong15.mp3'];
 					break;
 				case 'start':
 					soundFolder = 'sounds/start/';
-					soundFiles = ['start1.mp3', 'start2.mp3', 'start3.mp3'];
+					soundFiles = ['start1.mp3', 'start2.mp3', 'start3.mp3', 'start4.mp3', 'start5.mp3'];
 					break;
 				case 'end':
 					soundFolder = 'sounds/end/';
-					soundFiles = ['end1.mp3', 'end2.mp3', 'end3.mp3'];
+					soundFiles = ['end1.mp3', 'end2.mp3', 'end3.mp3', 'end4.mp3', 'end5.mp3', 'end6.mp3'];
 					break;
 				default:
 					return; // Для типа 'click' и 'swipe' не воспроизводим случайный звук
