--- a/mindex.html
+++ b/mindex.html
@@ -588,8 +588,8 @@
                 answers: [
                     { text: "Nike", correct: true, image: "images/nike.jpg" },
                     { text: "Adidas", correct: false, image: "images/adidas.jpg" },
-                    { text: "Puma", correct: false, image: "images/nike.jpg" },
-                    { text: "Reebok", correct: false, image: "images/adidas.jpg" }
+                    { text: "Puma", correct: false, image: "images/puma.jpg" },
+                    { text: "Reebok", correct: false, image: "images/reebok.jpg" }
                 ]
             }
 			
