--- a/mindex.html
+++ b/mindex.html
@@ -325,7 +325,7 @@
             }
 
             #game-condition {
-                font-size: clamp(14px, 3.5vw, 20px); /* Меньше размер шрифта */
+                font-size: clamp(16px, 3.5vw, 20px); /* Размер шрифта для портретной ориентации */
                 max-width: 90%; /* Шире блок для мобильных устройств */
             }
         }
