--- a/mindex.html
+++ b/mindex.html
@@ -321,7 +321,7 @@
 
             /* Адаптация начального экрана для портретной ориентации */
             #start-screen {
-                padding: 10px; /* Меньше отступы для мобильных устройств */
+                padding: 5px; /* Меньше отступы для мобильных устройств. было 10 */
             }
 
             #game-condition {
@@ -367,11 +367,11 @@
 
             /* Адаптация начального экрана для ландшафтной ориентации */
             #start-screen {
-                padding: 20px; /* Больше отступы для ландшафтной ориентации */
+                padding: 5px; /* Больше отступы для ландшафтной ориентации. было 20 */
             }
 
             #game-condition {
-                font-size: clamp(16px, 2.5vw, 24px); /* Размер шрифта для ландшафтной ориентации */
+                font-size: clamp(14px, 2.5vw, 24px); /* Размер шрифта для ландшафтной ориентации */
                 max-width: 70%; /* Уже блок для ландшафтной ориентации */
             }
         }
@@ -381,8 +381,14 @@
     <!-- Начальный экран -->
     <div id="start-screen">
         <div id="game-condition">
-            О, игрок! Тебе предоставляется шанс обыграть Великого-и-Ужасного Загадочника из Textazy, 
-            ответить на 25 вопросов и получить от него редкие и богатые милости.
+		<p><strong>О, странник!</strong><br>
+		Ты стоишь на пороге великого испытания, где судьба твоя решится в битве умов с <strong>Великим и Ужасным Загадочником из Textazy</strong>.<br>
+		25 загадок ждут тебя, каждая — ключ к сокровищам мудрости и милости.<br>
+		Сможешь ли ты разгадать их все и заслужить благосклонность Загадочника?<br>
+		Или падёшь, сражённый коварством его вопросов?<br>
+		Выбор за тобой, о смельчак.<br>
+				<strong>Вперёд, к победе и славе!</strong>
+			</p>
         </div>
         <button id="start-btn">Начать игру</button>
     </div>
