--- a/mindex.html
+++ b/mindex.html
@@ -381,12 +381,9 @@
     <!-- Начальный экран -->
     <div id="start-screen">
         <div id="game-condition">
-		<p><strong>О, странник!</strong><br>
-		Ты стоишь на пороге великого испытания, где судьба твоя решится в битве умов с <strong>Великим и Ужасным Загадочником из Textazy</strong>.<br>
-		25 загадок ждут тебя, каждая — ключ к сокровищам мудрости и милости.<br>
-		Сможешь ли ты разгадать их все и заслужить благосклонность Загадочника?<br>
-		Или падёшь, сражённый коварством его вопросов?<br>
-		Выбор за тобой, о смельчак.<br>
+		<p><strong>О, смелый искатель приключений!</strong><br>
+		Ты стоишь на пороге великого испытания. Сразись с <strong>Великим и Ужасным Загадочником из Textazy</strong>,<br>
+		ответь на 25 его хитроумных вопросов и получи в награду его редкие и щедрые дары!<br>
 				<strong>Вперёд, к победе и славе!</strong>
 			</p>
         </div>
