--- a/mindex.html
+++ b/mindex.html
@@ -372,7 +372,7 @@
 
             #game-condition {
                 font-size: clamp(14px, 2.5vw, 24px); /* Размер шрифта для ландшафтной ориентации */
-                max-width: 70%; /* Уже блок для ландшафтной ориентации */
+                max-width: 90%; /* Уже блок для ландшафтной ориентации */
             }
         }
     </style>
@@ -382,8 +382,8 @@
     <div id="start-screen">
         <div id="game-condition">
 		<p><strong>О, смелый искатель приключений!</strong><br>
-		Ты стоишь на пороге великого испытания. Сразись с <strong>Великим и Ужасным Загадочником из Textazy</strong>,<br>
-		ответь на 25 его хитроумных вопросов и получи в награду его редкие и щедрые дары!<br>
+		Великий и Ужасный Загадочник из Textazy бросает тебе вызов.
+		Ответь на 25 хитроумных вопросов и получи в награду его редкие и щедрые дары!<br>
 				<strong>Вперёд, к победе и славе!</strong>
 			</p>
         </div>
