--- a/mindex.html
+++ b/mindex.html
@@ -400,6 +400,9 @@
 				'sounds/correct/correct3.mp3',
 				'sounds/correct/correct4.mp3',
 				'sounds/correct/correct5.mp3',
+				'sounds/correct/correct6.mp3',
+				'sounds/correct/correct7.mp3',
+				'sounds/correct/correct8.mp3',
 				'sounds/wrong/wrong1.mp3',
 				'sounds/wrong/wrong2.mp3',
 				'sounds/wrong/wrong3.mp3',
@@ -412,6 +415,9 @@
 				'sounds/wrong/wrong10.mp3',
 				'sounds/wrong/wrong11.mp3',
 				'sounds/wrong/wrong12.mp3',
+				'sounds/wrong/wrong13.mp3',
+				'sounds/wrong/wrong14.mp3',
+				'sounds/wrong/wrong15.mp3',
 				'sounds/start/start1.mp3',
 				'sounds/start/start2.mp3',
 				'sounds/start/start3.mp3',
@@ -421,7 +427,8 @@
 				'sounds/end/end2.mp3',
 				'sounds/end/end3.mp3',
 				'sounds/end/end4.mp3',
-				'sounds/end/end5.mp3'
+				'sounds/end/end5.mp3',
+				'sounds/end/end6.mp3'
 			];
 
 			soundUrls.forEach(url => {
@@ -591,7 +598,16 @@
                     { text: "Puma", correct: false, image: "images/puma.jpg" },
                     { text: "Reebok", correct: false, image: "images/reebok.jpg" }
                 ]
-            }
+            },
+            {
+                question: "Всемирная история",
+                answers: [
+                    { text: "Банк Империал", correct: true, image: "images/nike.jpg" },
+                    { text: "Сбербанк", correct: false, image: "images/adidas.jpg" },
+                    { text: "Альфа-Банк", correct: false, image: "images/puma.jpg" },
+                    { text: "ВТБ", correct: false, image: "images/reebok.jpg" }
+                ]
+            }			
 			
             // Добавьте больше вопросов здесь
         ];
