--- a/mindex.html
+++ b/mindex.html
@@ -602,10 +602,10 @@
             {
                 question: "Всемирная история",
                 answers: [
-                    { text: "Банк Империал", correct: true, image: "images/nike.jpg" },
-                    { text: "Сбербанк", correct: false, image: "images/adidas.jpg" },
-                    { text: "Альфа-Банк", correct: false, image: "images/puma.jpg" },
-                    { text: "ВТБ", correct: false, image: "images/reebok.jpg" }
+                    { text: "Банк Империал", correct: true, image: "images/imperial.jpg" },
+                    { text: "Сбербанк", correct: false, image: "images/sberbank.jpg" },
+                    { text: "Альфа-Банк", correct: false, image: "images/alfabank.jpg" },
+                    { text: "ВТБ", correct: false, image: "images/vtb.jpg" }
                 ]
             }			
 			
