--- a/mindex.html
+++ b/mindex.html
@@ -129,8 +129,8 @@
             .game-container {
                 width: calc(100vh * 16 / 9);
                 height: 100vh;
-                max-width: none;
-                max-height: 80vh;
+        /* Убираем max-height */
+        /* max-height: 80vh; */
             }
 
             #question-section {
