--- a/mindex.html
+++ b/mindex.html
@@ -909,6 +909,15 @@
                     { text: "Альфа-Банк", correct: false, image: "images/alfabank.jpg" },
                     { text: "ВТБ", correct: false, image: "images/vtb.jpg" }
                 ]
+            },
+            {
+                question: "Иногда лучше жевать, чем говорить",
+                answers: [
+                    { text: "Stimorol", correct: true, image: "images/stimorol.jpg" },
+                    { text: "Orbit", correct: false, image: "images/orbit.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol.jpg" },
+                    { text: "Juicy Fruit", correct: false, image: "images/juicyfruit.jpg" }
+                ]
             }
             // Добавьте больше вопросов здесь
         ];
